# stackprep

./: .gitignore
app/: .cv_cache.txt  .jd_cache.txt  README.md  pyproject.toml
app/src/: stackprep.py  tech_prep.py
skill/: SKILL.md
